--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,8 @@ RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
-URL: http://github.com/paulnorthrop/revdbayes
-BugReports: http://github.com/paulnorthrop/revdbayes/issues
+URL: http://github.com/paulnorthrop/bangs
+BugReports: http://github.com/paulnorthrop/bangs/issues
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
