--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ S3method(summary,hef)
 export(hanova1)
 export(hef)
 export(set_user_prior)
+export(sim_beta_binom)
 import(methods)
 importFrom(graphics,plot)
