Add sim_gamma_pois. [ci skip]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(hanova1)
 export(hef)
 export(set_user_prior)
 export(sim_beta_binom)
+export(sim_gamma_pois)
 import(methods)
 importFrom(graphics,plot)
