--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ S3method(summary,hef)
 export(hanova1)
 export(hef)
 export(set_user_prior)
-export(sim_beta_binom)
 export(sim_gamma_pois)
+export(sim_pred_beta_binom)
 import(methods)
 importFrom(graphics,plot)
