Add posterior predictive simulation for hanova1().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(pp_check)
 export(set_user_prior)
 export(sim_pred_beta_binom)
 export(sim_pred_gamma_pois)
+export(sim_pred_hanova1)
 import(methods)
 importFrom(bayesplot,mcmc_areas)
 importFrom(bayesplot,mcmc_dens)
