--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ Description: Provides functions for the Bayesian analysis of some simple
     <https://cran.r-project.org/package=rust> is used 
     to simulate a random sample from the required posterior distribution.  
     At the moment three conjugate hierarchical models are available:
-    beta-binomial, gamma-Poisson and a 1-way Analysis of Variance (ANOVA).
-    See the 'bang' website for more information, documentation and examples.
+    beta-binomial, gamma-Poisson and a 1-way analysis of variance (ANOVA).
 Depends: R (>= 3.3.1)
 Imports: bayesplot (>= 1.1.0),
     graphics,
