Commit beginnings of iid() stuff.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,hef)
 S3method(summary,hef)
 export(hanova1)
 export(hef)
+export(iid)
 export(pp_check)
 export(set_user_prior)
 export(sim_pred_beta_binom)
