--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports: bayesplot (>= 1.1.0),
 RoxygenNote: 6.0.1
 Suggests: ggplot2 (>= 2.2.1),
     knitr,
+    MASS,
     rmarkdown,
     testthat
 VignetteBuilder: knitr
