--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bang
 Title: Bayesian Analysis, No Gibbs
-Version: 1.0.0.9000
-Date: 2017-12-22
+Version: 1.0.1
+Date: 2020-02-20
 Authors@R: c(person(c("Paul", "J."), "Northrop", email = "p.northrop@ucl.ac.uk",
   role = c("aut", "cre", "cph")), 
   person(c("Benjamin", "D."), "Hall", email = "benjamin.hall.16@ucl.ac.uk",
@@ -16,10 +16,9 @@ Description: Provides functions for the Bayesian analysis of some simple
 Depends: R (>= 3.3.0)
 Imports: bayesplot (>= 1.1.0),
     graphics,
-    methods,
     rust (>= 1.2.2),
     stats
-RoxygenNote: 6.0.1
+RoxygenNote: 7.0.1
 Suggests: ggplot2 (>= 2.2.1),
     knitr,
     MASS,
@@ -30,3 +29,4 @@ URL: http://github.com/paulnorthrop/bang
 BugReports: http://github.com/paulnorthrop/bang/issues
 License: GPL (>= 2)
 LazyData: true
+Encoding: UTF-8
