--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Suggests: ggplot2 (>= 2.2.1),
     rmarkdown,
     testthat
 VignetteBuilder: knitr
-URL: http://github.com/paulnorthrop/bang
+URL: https://paulnorthrop.github.io/bang/, http://github.com/paulnorthrop/bang
 BugReports: http://github.com/paulnorthrop/bang/issues
 License: GPL (>= 2)
 LazyData: true
