--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,10 @@
-pandoc: 1.19.2.1
-pkgdown: 1.4.1
+pandoc: 2.14.0.3
+pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
   bang-a-vignette: bang-a-vignette.html
   bang-b-hef-vignette: bang-b-hef-vignette.html
   bang-c-anova-vignette: bang-c-anova-vignette.html
   bang-d-ppc-vignette: bang-d-ppc-vignette.html
+last_built: 2022-04-11T21:45Z
 
